feat: 랜딩페이지 메타태그, seo 최적화 1차

--- a/apps/landing/index.html
+++ b/apps/landing/index.html
@@ -4,7 +4,164 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Checkmate</title>
+
+    <!-- Primary Meta Tags -->
+    <title>체크메이트 캘린더 - AI 기반 스마트 일정 관리</title>
+    <meta name="title" content="체크메이트 캘린더 - AI 기반 스마트 일정 관리" />
+    <meta
+      name="description"
+      content="체크메이트 캘린더는 AI가 일정을 자동으로 관리해주는 스마트 캘린더입니다. 자연어로 일정을 추가하고, 구글 캘린더와 동기화하여 효율적으로 시간을 관리하세요."
+    />
+    <meta
+      name="keywords"
+      content="체크메이트 캘린더, Checkmate Calendar, AI 캘린더, 스마트 일정관리, 구글 캘린더 동기화, 자연어 일정 추가, AI 일정 관리"
+    />
+    <meta name="author" content="Checkmate Calendar" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="Korean" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://checkmate-calendar.com/" />
+    <meta
+      property="og:title"
+      content="체크메이트 캘린더 - AI 기반 스마트 일정 관리"
+    />
+    <meta
+      property="og:description"
+      content="체크메이트 캘린더는 AI가 일정을 자동으로 관리해주는 스마트 캘린더입니다. 자연어로 일정을 추가하고, 구글 캘린더와 동기화하여 효율적으로 시간을 관리하세요."
+    />
+    <meta
+      property="og:image"
+      content="https://checkmate-calendar.com/og-image.svg"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="체크메이트 캘린더" />
+    <meta property="og:locale" content="ko_KR" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://checkmate-calendar.com/" />
+    <meta
+      property="twitter:title"
+      content="체크메이트 캘린더 - AI 기반 스마트 일정 관리"
+    />
+    <meta
+      property="twitter:description"
+      content="체크메이트 캘린더는 AI가 일정을 자동으로 관리해주는 스마트 캘린더입니다. 자연어로 일정을 추가하고, 구글 캘린더와 동기화하여 효율적으로 시간을 관리하세요."
+    />
+    <meta
+      property="twitter:image"
+      content="https://checkmate-calendar.com/og-image.svg"
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://checkmate-calendar.com/" />
+
+    <!-- Alternate Languages -->
+    <link
+      rel="alternate"
+      hreflang="ko"
+      href="https://checkmate-calendar.com/"
+    />
+    <link
+      rel="alternate"
+      hreflang="en"
+      href="https://checkmate-calendar.com/en"
+    />
+
+    <!-- Structured Data (Schema.org) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "체크메이트 캘린더",
+        "alternateName": "Checkmate Calendar",
+        "url": "https://checkmate-calendar.com",
+        "logo": "https://checkmate-calendar.com/favicon.svg",
+        "description": "체크메이트 캘린더는 AI가 일정을 자동으로 관리해주는 스마트 캘린더입니다. 자연어로 일정을 추가하고, 구글 캘린더와 동기화하여 효율적으로 시간을 관리하세요.",
+        "applicationCategory": "ProductivityApplication",
+        "operatingSystem": "Web",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "KRW"
+        },
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "ratingCount": "150"
+        },
+        "author": {
+          "@type": "Organization",
+          "name": "Checkmate Calendar",
+          "url": "https://checkmate-calendar.com"
+        }
+      }
+    </script>
+
+    <!-- Website Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "체크메이트 캘린더",
+        "alternateName": "Checkmate Calendar",
+        "url": "https://checkmate-calendar.com",
+        "description": "AI 기반 스마트 일정 관리 서비스",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": {
+            "@type": "EntryPoint",
+            "urlTemplate": "https://checkmate-calendar.com/search?q={search_term_string}"
+          },
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
+
+    <!-- FAQ Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "체크메이트 캘린더란 무엇인가요?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "체크메이트 캘린더는 AI 기반의 스마트 일정 관리 서비스입니다. 자연어로 일정을 추가하고, 여러 캘린더를 한 곳에서 관리하며, 구글 캘린더와 완벽하게 동기화됩니다."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "체크메이트 캘린더는 무료인가요?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "네, 체크메이트 캘린더는 현재 무료로 제공되고 있습니다. 모든 기본 기능을 무료로 사용하실 수 있습니다."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "구글 캘린더와 연동이 가능한가요?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "네, 체크메이트 캘린더는 구글 캘린더와 완벽하게 연동됩니다. 구글 계정으로 로그인하면 자동으로 모든 일정이 동기화됩니다."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "AI는 어떻게 일정을 관리하나요?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "체크메이트의 AI는 자연어를 이해하여 '내일 오후 3시에 회의'와 같은 문장을 자동으로 일정으로 변환합니다. 또한 중복된 일정을 감지하고, 최적의 일정을 제안합니다."
+            }
+          }
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
